# smart-tree

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_PLAN.md  LICENSE  README.MD  install.sh  output2.txt  release.sh
.github/workflows/: ci.yml  release.yml
docs/images/: available-rules.txt  example.txt
homebrew-formula/: smart-tree.rb
src/: display.rs  gitignore.rs  lib.rs  log_macros.rs  main.rs  rules.rs  scanner.rs  types.rs
src/display/: colors.rs  format.rs  mod.rs  state.rs  tests.rs  utils.rs
src/tests/: mod.rs
