[package]
name = "smart-tree"
version = "0.1.0"
edition = "2021"
authors = ["Erik Balfe"]
description = "A modern directory tree viewer with intelligent folding and display options"
homepage = "https://github.com/erik-balfe/smart-tree"
repository = "https://github.com/erik-balfe/smart-tree"
license = "MIT"
readme = "README.MD"
keywords = ["cli", "tree", "directory", "filesystem"]
categories = ["command-line-utilities", "filesystem"]

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.8"
[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
glob = "0.3"
